Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18057

don't use FULL inodebits in LDLM lock for restriping

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Several migration/restriping functions use MDS_INODELOCK_FULL mask to take blocking LDLM lock. That includes DOM bit as well and might causes assertion in inodebits handling code if conflicts with GROUP lock. Taking DOM lock bit is not needed there and it should be just excluded

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: